# ocaml-grad

./: LICENSE  README.md  a.out  dune-project  mentat.opam  ocaml-grad.opam
_build/: .db  .digest-db  log
_build/default/: ocaml-grad.dune-package  ocaml-grad.install  ocaml-grad.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: ocaml_grad.cma  ocaml_grad.cmxa  ocaml_grad.cmxs
_build/default/lib/.merlin-conf/: lib-ocaml_grad
_build/default/lib/.ocaml_grad.objs/byte/: ocaml_grad.cmi  ocaml_grad.cmo  ocaml_grad.cmt
_build/default/lib/.ocaml_grad.objs/native/: ocaml_grad.cmx
_build/default/test/.merlin-conf/: exe-test_ocaml_grad
_build/default/test/.test_ocaml_grad.eobjs/byte/: dune__exe__Test_ocaml_grad.cmi  dune__exe__Test_ocaml_grad.cmti
_build/default/test/.test_ocaml_grad.eobjs/native/: dune__exe__Test_ocaml_grad.cmx
_build/install/default/lib/ocaml-grad/: META  dune-package  opam
lib/: blas.ml  blas_stubs.c  dune  tensor.ml  tensor.mli
test/: dune
