(lang dune 3.20)

(name ocaml-grad)

(generate_opam_files true)

(source
 (github LapaJr31/ocaml-grad))

(authors "Yaroslav Latypov <jarlat04@lapuas.xyz>")


(license Apache-2.0)

(documentation https://url/to/documentation)

(package
 (name ocaml-grad)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))
